<package format="2">
  <name>lidar</name>
  <version>0.0.1</version>
  <description>
	not empty
  </description>
  <author>Torben Peters</author>
  <maintainer email="foo@trashmail.com">Torben Peters</maintainer>
  <license>BSD</license>
  <url>www.google.de</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
